--- a/tasks/java.yml
+++ b/tasks/java.yml
@@ -1,32 +1,30 @@
-- name: Install JDK 7 and 8
+- name: Install Jenv
+  package: name=jenv
+
+- name: Install OpenJDK  8, latest
   homebrew_cask: name={{ item }}
   when: is_osx
   with_items:
-    - java
-    - java7
-- name: Add webupd8team/java apt repository
-  apt_repository: repo='ppa:webupd8team/java'
-  become: True
-  when: is_ubuntu
-- name: Accept Oracle's License
-  debconf: name="{{ item }}" question='shared/accepted-oracle-license-v1-1' value='true' vtype='select'
-  become: True
-  when: is_ubuntu
-  with_items:
-    - oracle-java7-installer
-    - oracle-java8-installer
-- name: Install JDK 7 and 8
-  package: name={{ item }}
-  become: True
-  when: is_ubuntu
-  with_items:
-    - oracle-java7-installer
-    - oracle-java8-installer
-- name: Set JDK8 as default
-  command: update-java-alternatives -s java-8-oracle
-  become: True
-  when: is_ubuntu
+    - adoptopenjdk
+    - adoptopenjdk8
+
+- name: "Get available JDKs"
+  shell: "ls /Library/Java/JavaVirtualMachines/"
+  register: jvms
+  ignore_errors: yes
+  changed_when: False
+
+- name: "Register JDKs"
+  shell: "jenv add /Library/Java/JavaVirtualMachines/{{ item }}/Contents/Home || true"
+  with_items: jvms.stdout_lines
+  ignore_errors: yes
+  register: result
+  changed_when: "'already' not in result.stdout"
+
+- name: "Installs shims for all JDKs"
+  shell: "jenv rehash"
+  changed_when: False
 
 - name: Install maven
   package: name=maven
-  become: is_ubuntu
+  become: false
